Finalizing app for container deployment (Dockerfiles, Compose, and ENV fixes)